@@ -335,6 +335,9 @@ BUGFIXES:
   ZOOKEEPER-2477: documentation should refer to Java cli shell and not
   C cli shell (Abraham Fine via phunt)
 
+  ZOOKEEPER-1256: ClientPortBindTest is failing on Mac OS X
+  (Camille via phunt)
+
 IMPROVEMENTS:
   ZOOKEEPER-2024 Major throughput improvement with mixed workloads (Kfir Lev-Ari via shralex)
 
